feat: implement movie list with table display and fix movie schema

--- a/movie/templates/components/navbar.html
+++ b/movie/templates/components/navbar.html
@@ -1,6 +1,7 @@
 {% set navigation = [
     ("home","Home"),
     ("about","About"),
+    ("movies:list","Movies List"),
 ] %}
 
 <nav class="navbar navbar-expand bg-body-tertiary">
