fix: update navbar.html

--- a/movie/templates/components/navbar.html
+++ b/movie/templates/components/navbar.html
@@ -1,7 +1,6 @@
 {% set navigation = [
     ("home","Home"),
-    ("about","About"),
-    ("movies:list","Movies List"),
+    ("about","About")
 ] %}
 
 <nav class="navbar navbar-expand bg-body-tertiary">
