--- a/movie/templates/components/navbar.html
+++ b/movie/templates/components/navbar.html
@@ -1,6 +1,7 @@
 {% set navigation = [
     ("home","Home"),
-    ("about","About")
+    ("about","About"),
+    ("movies:list","Movies list")
 ] %}
 
 <nav class="navbar navbar-expand bg-body-tertiary">
