--- a/movie/templates/movies/create.html
+++ b/movie/templates/movies/create.html
@@ -1,35 +1,22 @@
+{% from 'macro/form_fields.html' import  form_field %}
 {% extends 'base.html' %}
+
 {% block title %}
   Create movie
 {% endblock %}
 {% block main %}
   <h1>Create a new movie</h1>
-  <code>{{ model_schema }}</code>
   <div class="row">
     <div class="col col-12 col-md-6 col-lg-4">
-      <form action="" method="post">
+      <form action="{{ url_for('movies:create') }}" method="post">
         {% for field_name, field_schema in model_schema.properties.items() %}
           {% set is_required = field_name in (model_schema.get('required')) or [] %}
-          <div class="mb-3">
-            <label
-              for="{{ field_name }}"
-              class="form-label">
-              {{ field_schema.title }}
-            </label>
-            <input
-              id="{{ field_name }}"
-              name="{{ field_name }}"
-              type="text"
-              class="form-control"
-              {% if field_schema.get('minLength') %}
-              minlength="{{ field_schema.minLength }}"
-              {% endif %}
-              {% if field_schema.get('maxLength') %}
-              maxlength="{{ field_schema.maxLength }}"
-              {% endif %}
-              {% if is_required %}required{% endif %}
-            >
-          </div>
+          {{ form_field(
+            field_name=field_name,
+            field_schema=field_schema,
+            is_required=is_required,
+            default=default) }}
+
         {% endfor %}
         <input type="submit" value="Create" class="btn btn-primary">
       </form>
