add macro for movie creation form using JSON schema

--- a/movie/templates/movies/create.html
+++ b/movie/templates/movies/create.html
@@ -1,3 +1,4 @@
+{% from 'movies/macro/form.html' import render_form with context %}
 {% from 'macro/form_fields.html' import  form_field %}
 {% extends 'base.html' %}
 
@@ -6,28 +7,8 @@
 {% endblock %}
 {% block main %}
   <h1>Create a new movie</h1>
-  <code>errors - {{ errors[field_name] }}</code>
-  <div class="row">
-    <div class="col col-12 col-md-6 col-lg-4">
-      <form action="{{ url_for('movies:create') }}" method="post">
-        {% for field_name, field_schema in model_schema.properties.items() %}
-          {% set is_required = field_name in (model_schema.get('required')) or [] %}
-          {{ form_field(
-            field_name=field_name,
-            field_schema=field_schema,
-            is_required=is_required,
-            value=form_data and form_data[field_name] or field_schema.default,
-            error=errors and errors[field_name] or None,
-            validated=form_validated) }}
-        {% endfor %}
-        <input type="submit" value="Create" class="btn btn-primary">
-      </form>
-    </div>
-  </div>
-  <div class="mt-3">
-    <a
-      href="{{ url_for('movies:list') }}"
-      class="btn btn-outline-primary ">Back to movies list
-    </a>
-  </div>
+  {{ render_form(
+    action=url_for('movies:create'),
+    button_text="Create") }}
+  {% include 'movies/components/back-to-list.html' %}
 {% endblock %}
